--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,11 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@video-player/*": ["src/app/video-player/*"],
+      "@playlist/*": ["src/app/playlist/*"],
+      "@services/*": ["src/app/services/*"]
+    }
   }
 }
