--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start-secure": "ng serve --ssl --ssl-key ../../localhost-cert/server.key --ssl-cert ../../localhost-cert/server.crt",
+    "serve:secure": "ng serve --ssl --ssl-key ../../localhost-cert/localnet.key --ssl-cert ../../localhost-cert/localnet.crt --host 0.0.0.0",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -40,6 +40,8 @@
     "@angular-devkit/build-angular": "~0.1001.6",
     "@angular/cli": "~10.1.6",
     "@angular/compiler-cli": "~10.1.5",
+    "@capacitor/cli": "latest",
+    "@types/chromecast-caf-sender": "^1.0.3",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -56,7 +58,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2",
-    "@capacitor/cli": "latest"
+    "typescript": "~4.0.2"
   }
 }
