--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,7 @@
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.scss"
             ],
-            "scripts": [],
-            "webWorkerTsConfig": "tsconfig.worker.json"
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -110,8 +109,7 @@
             "tsConfig": [
               "tsconfig.app.json",
               "tsconfig.spec.json",
-              "e2e/tsconfig.json",
-              "tsconfig.worker.json"
+              "e2e/tsconfig.json"
             ],
             "exclude": [
               "**/node_modules/**"
